View Issue Details

IDProjectCategoryView StatusLast Update
0032313CommunityOCCT:Modeling Algorithmspublic2021-04-25 19:52
Reporterjensgw Assigned Tobugmaster  
PrioritynormalSeveritymajor 
Status closedResolutionfixed 
Product Version5.2.2 
Target Version7.6.0Fixed in Version7.6.0 
Summary0032313: Modeling Algorithms - Missing definition of constructor in GeomFill_NSections
DescriptionThe folowing constructor is declared in the header but never defined in the cpp:

Standard_EXPORT GeomFill_NSections(const TColGeom_SequenceOfCurve& NC, const TColStd_SequenceOfReal& NP, const Standard_Real UF, const Standard_Real UL);

TagsNo tags attached.
Test case numberNot required

Activities

git

2021-04-21 14:17

administrator   ~0100489

Branch CR32313 has been created by kgv.

SHA-1: b95e4e3d60142695d7790913864301fc878464ba


Detailed log of new commits:

Author: kgv
Date: Wed Apr 21 14:17:30 2021 +0300

    0032313: Modeling Algorithms - Missing definition of constructor in GeomFill_NSections

kgv

2021-04-21 15:31

developer   ~0100493

Mikhail,

could you please take a look onto the patch?
- OCCT: branch CR32313.

http://jenkins-test-12.nnov.opencascade.com:8080/view/CR32313-master-KGV/view/OCCT%20compile/

msv

2021-04-21 15:51

developer   ~0100494

Please raise CR32313 into occt.

bugmaster

2021-04-25 10:58

administrator   ~0100546

Combination -
OCCT branch : IR-2021-04-23
master SHA - fd2efe5428b3b2b9d300b0612c0a53ee2486ba64
a87b7ddc8cb44606b91e3f37113847c3f5f50fdc
Products branch : IR-2021-04-23 SHA - 740db2b9c0429fd95b1e8cf3790001245aaec02b
was compiled on Linux, MacOS and Windows platforms and tested in optimize mode.

Number of compiler warnings:
No new/fixed warnings

Regressions/Differences/Improvements:
No regressions/differences

CPU differences:
Debian80-64:
OCCT
Total CPU difference: 17901.710000000523 / 17988.35000000045 [-0.48%]
Products
Total CPU difference: 11558.800000000136 / 11564.760000000093 [-0.05%]
Windows-64-VC14:
OCCT
Total CPU difference: 5522.40625 / 5520.953125 [+0.03%]
Products
Total CPU difference: 12871.203125 / 12932.890625 [-0.48%]


Image differences :
No differences that require special attention

Memory differences :
No differences that require special attention

git

2021-04-25 12:24

administrator   ~0100557

Branch CR32313 has been deleted by inv.

SHA-1: b95e4e3d60142695d7790913864301fc878464ba

jensgw

2021-04-25 19:03

reporter   ~0100579

Hi there, wow that fix is progressing quickly!
A note on "Test case number => Not required ".
If you do not already have it, it is highly beneficial to have a test for every one of the constructor methods - not only for this class but in general.
 a) Testing existence of the method ;-)
 b) Testing the assumed cases with valid input
 c) Testing the error cases with "bullshit" input

kgv

2021-04-25 19:52

developer   ~0100581

jensgw,
> If you do not already have it,
> it is highly beneficial to have a test for every one
> of the constructor methods
thanks for suggestions.

Fill free to consider them in patches.

Related Changesets

occt: master f6651f22

2021-04-21 11:17:30

kgv


Committer: bugmaster Details Diff
0032313: Modeling Algorithms - Missing definition of constructor in GeomFill_NSections Affected Issues
0032313
mod - src/GeomFill/GeomFill_NSections.cxx Diff File

Issue History

Date Modified Username Field Change
2021-04-21 13:04 jensgw New Issue
2021-04-21 13:04 jensgw Assigned To => msv
2021-04-21 14:10 kgv Summary Missing definition of constructor in GeomFill_NSections => Modeling Algorithms - Missing definition of constructor in GeomFill_NSections
2021-04-21 14:12 kgv Target Version => 7.6.0
2021-04-21 14:13 kgv Product Version 7.4.0 => 5.2.2
2021-04-21 14:17 git Note Added: 0100489
2021-04-21 15:31 kgv Note Added: 0100493
2021-04-21 15:31 kgv Status new => resolved
2021-04-21 15:51 msv Note Added: 0100494
2021-04-21 15:51 msv Assigned To msv => bugmaster
2021-04-21 15:51 msv Status resolved => reviewed
2021-04-25 10:58 bugmaster Note Added: 0100546
2021-04-25 10:58 bugmaster Status reviewed => tested
2021-04-25 11:07 bugmaster Test case number => Not required
2021-04-25 11:55 bugmaster Changeset attached => occt master f6651f22
2021-04-25 11:55 bugmaster Status tested => verified
2021-04-25 11:55 bugmaster Resolution open => fixed
2021-04-25 12:24 git Note Added: 0100557
2021-04-25 19:03 jensgw Note Added: 0100579
2021-04-25 19:52 kgv Note Added: 0100581