0032313: Modeling Algorithms - Missing definition of constructor in GeomFill_NSections